--- a/kuromi.html
+++ b/kuromi.html
@@ -100,7 +100,7 @@
         <a href="#blog">Blog</a>
         <a href="#contact">Contact</a>
         <a href="admin.html">Admin</a>
-        <a href="login.html">Log out</a>
+        <a href="index.html">Log out</a>
     </nav>
 
     <div class="content">
