--- a/register.html
+++ b/register.html
@@ -101,7 +101,7 @@
             <input type="password" id="password" placeholder="Password" required>
             <input type="password" id="confirm-password" placeholder="Confirm Password" required>
             <button type="submit">Register</button>
-            <a href="login.html">Already have an account? Log In</a>
+            <a href="index.html">Already have an account? Log In</a>
             <div id="message" class="message"></div>
         </form>
     </div>
